--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/pata-ngoma
+spring.datasource.username=hamso
+spring.datasource.password=PataNgoma
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+management.endpoints.web.exposure.include=*
+logging.level.org.springframework.web= DEBUG
+logging.level.org.hibernate= DEBUG
